# bot

./: .gitignore  README.md  app.py  bot.py  main.py  module.py  news.py  pyproject.toml  use_case.py
hacker_news/: __init__.py
hacker_news/response/: __init__.py  hit.py
libs/: cache.py
models/: result.py
telegram/: __init__.py
telegram/results/: __init__.py  chat.py  get_updates.py
telegram_handler/: __init__.py
telegram_handler/results/: __init__.py  get_me.py  get_updates.py  send_message.py  user.py
